Модул 06, Видео 07 - Библиотека за първата формула

--- a/MP01/UserInput/UserInput.csproj
+++ b/MP01/UserInput/UserInput.csproj
@@ -42,6 +42,10 @@
       <Project>{82686EB0-003F-4973-B1BA-A1B8B3EE69C0}</Project>
       <Name>Colors</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Calculations\Calculations.csproj">
+      <Project>{BB6BA5DB-6020-4B76-A389-58C5C4546BE1}</Project>
+      <Name>Calculations</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
