--- a/MP01/Calculator/Calculator.csproj
+++ b/MP01/Calculator/Calculator.csproj
@@ -44,6 +44,14 @@
       <Project>{224CA8C1-2484-455D-AA44-3B61C6EA98BC}</Project>
       <Name>About</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Calculations\Calculations.csproj">
+      <Project>{BB6BA5DB-6020-4B76-A389-58C5C4546BE1}</Project>
+      <Name>Calculations</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Colors\Colors.csproj">
+      <Project>{82686EB0-003F-4973-B1BA-A1B8B3EE69C0}</Project>
+      <Name>Colors</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
